<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/new_round"
        android:textAppearance="?attr/textAppearanceHeadlineLarge"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/newRoundTitle"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newRoundTitle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/courseLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="Course:"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/courseInput"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/default_course" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="Date:"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dateInput"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:ems="10"
                android:focusable="false"
                android:hint="Round Date"
                android:inputType="date"
                android:textAlignment="viewStart"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teesLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="Tees:"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/teesInput"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/default_tees" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/holesLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="Holes:"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/numHolesToggle"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/material_dynamic_neutral90"
                android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                android:textColor="@color/black"
                android:textOff="18 Holes"
                android:textOn="9 Holes"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/createRoundButton"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:enabled="true"
        android:text="@string/create_round"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>